WIP: env template

--- a/.env.example
+++ b/.env.example
@@ -5,7 +5,7 @@ FILE_ROOT_DIRECTORY=/src/data/
 RESULT_JSON=result.json
 JSON_CONFIG=config.json
 ENVIRONMENT_MODE=development
-PROJECT=onb-to-spectrum
+PROJECT=onboarding-paycor
 
 ##### Birddog - Onboarding #####
 BIRDDOG_BASE_URL=
@@ -21,15 +21,8 @@ BIRDDOG_COMPANY_CODE=
 BIRDDOG_TEST_COMPANY_CODE=
 BIRDDOG_DOCUMENTS_DIRECTORY=
 
-##### Spectrum #####
-SPECTRUM_BASE_URL=
-SPECTRUM_ADD_EMPLOYEE_URL=
-SPECTRUM_UDPATE_EMP_REQ_URL=
-SPECTRUM_UPDATE_EMP_PERSONAL_URL=
-SPECTRUM_UPDATE_EMP_PR_TAX_URL=
-SPECTRUM_UPLOAD_IMAGES_URL=
-SPECTRUM_DOCUMENTS_DIRECTORY=
-SPECTRUM_AUTH_CODE=
+##### Paycor #####
+
 
 ##### Azure #####
 AZURE_ACCOUNT_CONN_STRING=
